--- a/Contacts.html
+++ b/Contacts.html
@@ -3,33 +3,33 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="/portfolio/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-3a5d15c9.css">
-	<link rel="modulepreload" href="/_app/start-8b8c21c1.js">
-	<link rel="modulepreload" href="/_app/chunks/vendor-fdb51b2c.js">
-	<link rel="modulepreload" href="/_app/pages/__layout.svelte-b355a986.js">
-	<link rel="modulepreload" href="/_app/pages/Contacts.svelte-5f0d0394.js">
-	<link rel="modulepreload" href="/_app/chunks/Logo-3d2ee269.js">
+	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-3a5d15c9.css">
+	<link rel="modulepreload" href="/portfolio/_app/start-5893f3d9.js">
+	<link rel="modulepreload" href="/portfolio/_app/chunks/vendor-fdb51b2c.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/__layout.svelte-b355a986.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/Contacts.svelte-4f9f8e3d.js">
+	<link rel="modulepreload" href="/portfolio/_app/chunks/Logo-4db1a397.js">
 	</head>
 	<body>
 		<div>
 
 
-<div class="snap-center h-screen bg-black text-white flex flex-col justify-center items-center gap-5"><div class="flex justify-start items-center gap-4 w-52"><img width="40" height="40" src="/static/telegram.svg" alt="telegram logo">
+<div class="snap-center h-screen bg-black text-white flex flex-col justify-center items-center gap-5"><div class="flex justify-start items-center gap-4 w-52"><img width="40" height="40" src="/telegram.svg" alt="telegram logo">
         <h1 class="text-2xl font-bold"><a href="https://t.me/spcpolice">@spcpolice
             </a></h1></div>
-    <div class="flex justify-start items-center gap-4 w-52"><img width="40" height="40" src="/static/github.svg" alt="github logo">
+    <div class="flex justify-start items-center gap-4 w-52"><img width="40" height="40" src="/github.svg" alt="github logo">
         <h1 class="text-2xl font-bold"><a href="https://github.com/spacepolice10/">spacepolice10
             </a></h1></div></div>
 
 
-		<script type="module" data-hydrate="182o0hq">
-		import { start } from "/_app/start-8b8c21c1.js";
+		<script type="module" data-hydrate="1adk51a">
+		import { start } from "/portfolio/_app/start-5893f3d9.js";
 		start({
-			target: document.querySelector('[data-hydrate="182o0hq"]').parentNode,
-			paths: {"base":"","assets":""},
+			target: document.querySelector('[data-hydrate="1adk51a"]').parentNode,
+			paths: {"base":"/portfolio","assets":"/portfolio"},
 			session: {},
 			route: true,
 			spa: false,
@@ -38,8 +38,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/_app/pages/__layout.svelte-b355a986.js"),
-						import("/_app/pages/Contacts.svelte-5f0d0394.js")
+					import("/portfolio/_app/pages/__layout.svelte-b355a986.js"),
+						import("/portfolio/_app/pages/Contacts.svelte-4f9f8e3d.js")
 				],
 				params: {}
 			}
