--- a/Introduction.html
+++ b/Introduction.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="/portfolio/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-3a5d15c9.css">
-	<link rel="modulepreload" href="/_app/start-8b8c21c1.js">
-	<link rel="modulepreload" href="/_app/chunks/vendor-fdb51b2c.js">
-	<link rel="modulepreload" href="/_app/pages/__layout.svelte-b355a986.js">
-	<link rel="modulepreload" href="/_app/pages/Introduction.svelte-5aeacdf3.js">
-	<link rel="modulepreload" href="/_app/chunks/Logo-3d2ee269.js">
+	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-3a5d15c9.css">
+	<link rel="modulepreload" href="/portfolio/_app/start-5893f3d9.js">
+	<link rel="modulepreload" href="/portfolio/_app/chunks/vendor-fdb51b2c.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/__layout.svelte-b355a986.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/Introduction.svelte-3bf23e52.js">
+	<link rel="modulepreload" href="/portfolio/_app/chunks/Logo-4db1a397.js">
 	</head>
 	<body>
 		<div>
@@ -21,23 +21,23 @@
     <div class="mx-10"><div class="flex flex-col justify-start w-7/12"><h1 class="text-4xl font-bold">Hello 👋, my name is Vladimir and I am frontend developer!</h1>
             <h3 class="text-gray-300 text-sm font-thin">I am trying to build certain skills and abilities to develop fully fledged web applications. In parallel I use some backend-utilities and mobile-development technologies so in future I could become a full-stack developer.</h3></div>
         <div class="flex flex-col items-start"><div class="flex flex-col gap-5 my-5"><h2>Here&#39;s what I use:</h2>
-                <ul class="flex items-center gap-4"><li><img width="40" height="40" src="/static/svelte.svg" alt="svelte logo"></li>
-                    <li><img width="40" height="40" src="/static/tailwind.svg" alt="tailwind logo"></li>
-                    <li><img width="40" height="40" src="/static/react.svg" alt="react logo"></li>
-                    <li><img width="40" height="40" src="/static/supabase.svg" alt="supabase logo"></li>
-                    <li><img width="40" height="40" src="/static/postgres.svg" alt="postgres logo"></li>
-                    <li><img width="40" height="40" src="/static/sequelize.svg" alt="sequelize logo"></li>
-                    <li><img width="40" height="40" src="/static/nodejs.svg" alt="nodejs logo"></li>
-                    <li><img width="40" height="40" src="/static/wordpress.svg" alt="wordpress logo"></li>
-                    <li><img width="40" height="40" src="/static/vite.svg" alt="vite logo"></li></ul>
+                <ul class="flex items-center gap-4"><li><img width="40" height="40" src="/svelte.svg" alt="svelte logo"></li>
+                    <li><img width="40" height="40" src="/tailwind.svg" alt="tailwind logo"></li>
+                    <li><img width="40" height="40" src="/react.svg" alt="react logo"></li>
+                    <li><img width="40" height="40" src="/supabase.svg" alt="supabase logo"></li>
+                    <li><img width="40" height="40" src="/postgres.svg" alt="postgres logo"></li>
+                    <li><img width="40" height="40" src="/sequelize.svg" alt="sequelize logo"></li>
+                    <li><img width="40" height="40" src="/nodejs.svg" alt="nodejs logo"></li>
+                    <li><img width="40" height="40" src="/wordpress.svg" alt="wordpress logo"></li>
+                    <li><img width="40" height="40" src="/vite.svg" alt="vite logo"></li></ul>
                 <i class="text-gray-300 text-xs">...and much more to come.</i></div></div></div></div>
 
 
-		<script type="module" data-hydrate="1h0kvxt">
-		import { start } from "/_app/start-8b8c21c1.js";
+		<script type="module" data-hydrate="a6ueyu">
+		import { start } from "/portfolio/_app/start-5893f3d9.js";
 		start({
-			target: document.querySelector('[data-hydrate="1h0kvxt"]').parentNode,
-			paths: {"base":"","assets":""},
+			target: document.querySelector('[data-hydrate="a6ueyu"]').parentNode,
+			paths: {"base":"/portfolio","assets":"/portfolio"},
 			session: {},
 			route: true,
 			spa: false,
@@ -46,8 +46,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/_app/pages/__layout.svelte-b355a986.js"),
-						import("/_app/pages/Introduction.svelte-5aeacdf3.js")
+					import("/portfolio/_app/pages/__layout.svelte-b355a986.js"),
+						import("/portfolio/_app/pages/Introduction.svelte-3bf23e52.js")
 				],
 				params: {}
 			}
