--- a/Contacts.html
+++ b/Contacts.html
@@ -7,28 +7,28 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
 	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-3a5d15c9.css">
-	<link rel="modulepreload" href="/portfolio/_app/start-5893f3d9.js">
+	<link rel="modulepreload" href="/portfolio/_app/start-71b3749c.js">
 	<link rel="modulepreload" href="/portfolio/_app/chunks/vendor-fdb51b2c.js">
 	<link rel="modulepreload" href="/portfolio/_app/pages/__layout.svelte-b355a986.js">
-	<link rel="modulepreload" href="/portfolio/_app/pages/Contacts.svelte-4f9f8e3d.js">
-	<link rel="modulepreload" href="/portfolio/_app/chunks/Logo-4db1a397.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/Contacts.svelte-2d38f649.js">
+	<link rel="modulepreload" href="/portfolio/_app/chunks/Logo-482af2a0.js">
 	</head>
 	<body>
 		<div>
 
 
-<div class="snap-center h-screen bg-black text-white flex flex-col justify-center items-center gap-5"><div class="flex justify-start items-center gap-4 w-52"><img width="40" height="40" src="/telegram.svg" alt="telegram logo">
+<div class="snap-center h-screen bg-black text-white flex flex-col justify-center items-center gap-5"><div class="flex justify-start items-center gap-4 w-52"><img width="40" height="40" src="/portfolio/telegram.svg" alt="telegram logo">
         <h1 class="text-2xl font-bold"><a href="https://t.me/spcpolice">@spcpolice
             </a></h1></div>
-    <div class="flex justify-start items-center gap-4 w-52"><img width="40" height="40" src="/github.svg" alt="github logo">
+    <div class="flex justify-start items-center gap-4 w-52"><img width="40" height="40" src="/portfolio/github.svg" alt="github logo">
         <h1 class="text-2xl font-bold"><a href="https://github.com/spacepolice10/">spacepolice10
             </a></h1></div></div>
 
 
-		<script type="module" data-hydrate="1adk51a">
-		import { start } from "/portfolio/_app/start-5893f3d9.js";
+		<script type="module" data-hydrate="chem9q">
+		import { start } from "/portfolio/_app/start-71b3749c.js";
 		start({
-			target: document.querySelector('[data-hydrate="1adk51a"]').parentNode,
+			target: document.querySelector('[data-hydrate="chem9q"]').parentNode,
 			paths: {"base":"/portfolio","assets":"/portfolio"},
 			session: {},
 			route: true,
@@ -39,7 +39,7 @@
 				error: null,
 				nodes: [
 					import("/portfolio/_app/pages/__layout.svelte-b355a986.js"),
-						import("/portfolio/_app/pages/Contacts.svelte-4f9f8e3d.js")
+						import("/portfolio/_app/pages/Contacts.svelte-2d38f649.js")
 				],
 				params: {}
 			}
