--- a/Projects.html
+++ b/Projects.html
@@ -8,10 +8,10 @@
 		<meta http-equiv="content-security-policy" content="">
 	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-3a5d15c9.css">
 	<link rel="stylesheet" href="/portfolio/_app/assets/pages/Projects.svelte-6e17a411.css">
-	<link rel="modulepreload" href="/portfolio/_app/start-5893f3d9.js">
+	<link rel="modulepreload" href="/portfolio/_app/start-71b3749c.js">
 	<link rel="modulepreload" href="/portfolio/_app/chunks/vendor-fdb51b2c.js">
 	<link rel="modulepreload" href="/portfolio/_app/pages/__layout.svelte-b355a986.js">
-	<link rel="modulepreload" href="/portfolio/_app/pages/Projects.svelte-164da4fd.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/Projects.svelte-1e2a0776.js">
 	</head>
 	<body>
 		<div>
@@ -19,7 +19,7 @@
 
 <div class="grid grid-cols-1 lg:grid-cols-3 lg:h-screen">
 <div class="bg-[#B62DFF] text-white box-border overflow-hidden h-screen lg:h-auto svelte-a3ex7n"><a href="https://github.com/spacepolice10/shop-next"><div class="flex justify-between w-full"><h1 class="font-bold text-2xl m-5">shop-next</h1></div>
-    <div class="flex flex-col gap-5 overflow-hidden box-border"><div class="flex justify-center items-center w-20 h-20 m-4"><img width="95" height="95" src="/isometric/shopping-bag.png" alt="shopping-bag.png logo"></div>
+    <div class="flex flex-col gap-5 overflow-hidden box-border"><div class="flex justify-center items-center w-20 h-20 m-4"><img width="95" height="95" src="/portfolio/isometric/shopping-bag.png" alt="shopping-bag.png logo"></div>
         <div class="flex flex-col gap-2 m-4"><p class="font-bold text-4xl opacity-90 w-56">Next-based project</p>
             <p class="opacity-80 w-52">Online-shop made using popular React framework, Node and Postgres</p></div>
         <div id="test"><p class="backward font-bold text-2xl opacity-70 w-52 svelte-a3ex7n">shop</p><p class="forward font-bold text-3xl opacity-50 w-52 svelte-a3ex7n">cart</p><p class="backward font-bold text-2xl opacity-70 w-52 svelte-a3ex7n">authorisation</p><p class="forward font-bold text-3xl opacity-50 w-52 svelte-a3ex7n">filter</p><p class="backward font-bold text-2xl opacity-70 w-52 svelte-a3ex7n">ORM</p><p class="forward font-bold text-3xl opacity-50 w-52 svelte-a3ex7n">eCommerce</p><p class="backward font-bold text-2xl opacity-70 w-52 svelte-a3ex7n">blog</p></div>
@@ -29,7 +29,7 @@
 </div>
     
 <div class="bg-[#FF2900] text-white box-border overflow-hidden h-screen lg:h-auto svelte-a3ex7n"><a href="https://github.com/spacepolice10/react-calc"><div class="flex justify-between w-full"><h1 class="font-bold text-2xl m-5">svelte-blog</h1></div>
-    <div class="flex flex-col gap-5 overflow-hidden box-border"><div class="flex justify-center items-center w-20 h-20 m-4"><img width="95" height="95" src="/isometric/laptop.png" alt="laptop.png logo"></div>
+    <div class="flex flex-col gap-5 overflow-hidden box-border"><div class="flex justify-center items-center w-20 h-20 m-4"><img width="95" height="95" src="/portfolio/isometric/laptop.png" alt="laptop.png logo"></div>
         <div class="flex flex-col gap-2 m-4"><p class="font-bold text-4xl opacity-90 w-56">SvelteKit-blog</p>
             <p class="opacity-80 w-52">WordPress used as a fully-functional backend with editor and database.</p></div>
         <div id="test"><p class="backward font-bold text-2xl opacity-70 w-52 svelte-a3ex7n">blog</p><p class="forward font-bold text-3xl opacity-50 w-52 svelte-a3ex7n">svelte</p><p class="backward font-bold text-2xl opacity-70 w-52 svelte-a3ex7n">wordpress</p><p class="forward font-bold text-3xl opacity-50 w-52 svelte-a3ex7n">design</p><p class="backward font-bold text-2xl opacity-70 w-52 svelte-a3ex7n">graphql</p><p class="forward font-bold text-3xl opacity-50 w-52 svelte-a3ex7n">domain</p></div>
@@ -39,7 +39,7 @@
 </div>  
     
 <div class="bg-[#00B8FF] text-white box-border overflow-hidden h-screen lg:h-auto svelte-a3ex7n"><a href="https://github.com/spacepolice10/react-calc"><div class="flex justify-between w-full"><h1 class="font-bold text-2xl m-5">react-calc</h1></div>
-    <div class="flex flex-col gap-5 overflow-hidden box-border"><div class="flex justify-center items-center w-20 h-20 m-4"><img width="95" height="95" src="/isometric/calculator.png" alt="calculator.png logo"></div>
+    <div class="flex flex-col gap-5 overflow-hidden box-border"><div class="flex justify-center items-center w-20 h-20 m-4"><img width="95" height="95" src="/portfolio/isometric/calculator.png" alt="calculator.png logo"></div>
         <div class="flex flex-col gap-2 m-4"><p class="font-bold text-4xl opacity-90 w-56">React-based project</p>
             <p class="opacity-80 w-52">Combination of calculator and converter launched as Electron app</p></div>
         <div id="test"><p class="backward font-bold text-2xl opacity-70 w-52 svelte-a3ex7n">calculator</p><p class="forward font-bold text-3xl opacity-50 w-52 svelte-a3ex7n">converter</p><p class="backward font-bold text-2xl opacity-70 w-52 svelte-a3ex7n">electron</p><p class="forward font-bold text-3xl opacity-50 w-52 svelte-a3ex7n">redux</p><p class="backward font-bold text-2xl opacity-70 w-52 svelte-a3ex7n">ant design</p><p class="forward font-bold text-3xl opacity-50 w-52 svelte-a3ex7n">api</p><p class="backward font-bold text-2xl opacity-70 w-52 svelte-a3ex7n">drag and drop</p></div>
@@ -49,10 +49,10 @@
 </div></div>
 
 
-		<script type="module" data-hydrate="hebe2d">
-		import { start } from "/portfolio/_app/start-5893f3d9.js";
+		<script type="module" data-hydrate="4gse8w">
+		import { start } from "/portfolio/_app/start-71b3749c.js";
 		start({
-			target: document.querySelector('[data-hydrate="hebe2d"]').parentNode,
+			target: document.querySelector('[data-hydrate="4gse8w"]').parentNode,
 			paths: {"base":"/portfolio","assets":"/portfolio"},
 			session: {},
 			route: true,
@@ -63,7 +63,7 @@
 				error: null,
 				nodes: [
 					import("/portfolio/_app/pages/__layout.svelte-b355a986.js"),
-						import("/portfolio/_app/pages/Projects.svelte-164da4fd.js")
+						import("/portfolio/_app/pages/Projects.svelte-1e2a0776.js")
 				],
 				params: {}
 			}
