--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 		<meta http-equiv="content-security-policy" content="">
 	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-3a5d15c9.css">
 	<link rel="stylesheet" href="/portfolio/_app/assets/pages/Projects.svelte-6bef6533.css">
-	<link rel="modulepreload" href="/portfolio/_app/start-8cc480ea.js">
+	<link rel="modulepreload" href="/portfolio/_app/start-76155829.js">
 	<link rel="modulepreload" href="/portfolio/_app/chunks/vendor-fdb51b2c.js">
 	<link rel="modulepreload" href="/portfolio/_app/pages/__layout.svelte-b355a986.js">
-	<link rel="modulepreload" href="/portfolio/_app/pages/index.svelte-f9f75315.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/index.svelte-6fe7cfb2.js">
 	<link rel="modulepreload" href="/portfolio/_app/pages/Introduction.svelte-b1b0b926.js">
 	<link rel="modulepreload" href="/portfolio/_app/chunks/Logo-482af2a0.js">
-	<link rel="modulepreload" href="/portfolio/_app/pages/Projects.svelte-1281e8d9.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/Projects.svelte-fcbf8dea.js">
 	<link rel="modulepreload" href="/portfolio/_app/pages/Contacts.svelte-2d38f649.js">
 	</head>
 	<body>
@@ -47,7 +47,7 @@
         </div></a>
 </div>
     
-<div class="bg-[#FF2900] text-white box-border overflow-hidden h-screen lg:h-auto svelte-1p32xp7"><a href="https://github.com/spacepolice10/react-calc"><div class="flex justify-between w-full"><h1 class="font-bold text-2xl m-5">svelte-blog</h1></div>
+<div class="bg-[#FF2900] text-white box-border overflow-hidden h-screen lg:h-auto svelte-1p32xp7"><a href="https://github.com/spacepolice10/blog-svelte"><div class="flex justify-between w-full"><h1 class="font-bold text-2xl m-5">svelte-blog</h1></div>
     <div class="flex flex-col gap-5 overflow-hidden box-border"><div class="flex justify-center items-center w-20 h-20 m-4"><img width="95" height="95" src="/portfolio/isometric/laptop.png" alt="laptop.png logo"></div>
         <div class="flex flex-col gap-2 m-4"><p class="font-bold text-4xl opacity-90 w-56">SvelteKit-blog</p>
             <p class="opacity-80 w-52">WordPress used as a fully-functional backend with editor and database.</p></div>
@@ -74,10 +74,10 @@
             </a></h1></div></div></div></div>
 
 
-		<script type="module" data-hydrate="jj84yx">
-		import { start } from "/portfolio/_app/start-8cc480ea.js";
+		<script type="module" data-hydrate="6rg6se">
+		import { start } from "/portfolio/_app/start-76155829.js";
 		start({
-			target: document.querySelector('[data-hydrate="jj84yx"]').parentNode,
+			target: document.querySelector('[data-hydrate="6rg6se"]').parentNode,
 			paths: {"base":"/portfolio","assets":"/portfolio"},
 			session: {},
 			route: true,
@@ -88,7 +88,7 @@
 				error: null,
 				nodes: [
 					import("/portfolio/_app/pages/__layout.svelte-b355a986.js"),
-						import("/portfolio/_app/pages/index.svelte-f9f75315.js")
+						import("/portfolio/_app/pages/index.svelte-6fe7cfb2.js")
 				],
 				params: {}
 			}
