--- a/Introduction.html
+++ b/Introduction.html
@@ -3,15 +3,15 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
-		<link rel="icon" href="/portfolio/favicon.png" />
+		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-3a5d15c9.css">
-	<link rel="modulepreload" href="/portfolio/_app/start-76155829.js">
-	<link rel="modulepreload" href="/portfolio/_app/chunks/vendor-fdb51b2c.js">
-	<link rel="modulepreload" href="/portfolio/_app/pages/__layout.svelte-b355a986.js">
-	<link rel="modulepreload" href="/portfolio/_app/pages/Introduction.svelte-b1b0b926.js">
-	<link rel="modulepreload" href="/portfolio/_app/chunks/Logo-482af2a0.js">
+	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-c658a416.css">
+	<link rel="modulepreload" href="/_app/start-2139b86b.js">
+	<link rel="modulepreload" href="/_app/chunks/vendor-9269c6a4.js">
+	<link rel="modulepreload" href="/_app/pages/__layout.svelte-f1514b8a.js">
+	<link rel="modulepreload" href="/_app/pages/Introduction.svelte-5bdcfc9d.js">
+	<link rel="modulepreload" href="/_app/chunks/Logo-faecdb38.js">
 	</head>
 	<body>
 		<div>
@@ -34,10 +34,10 @@
 
 
 		<script type="module" data-hydrate="1rfgab">
-		import { start } from "/portfolio/_app/start-76155829.js";
+		import { start } from "/_app/start-2139b86b.js";
 		start({
 			target: document.querySelector('[data-hydrate="1rfgab"]').parentNode,
-			paths: {"base":"/portfolio","assets":"/portfolio"},
+			paths: {"base":"","assets":""},
 			session: {},
 			route: true,
 			spa: false,
@@ -46,8 +46,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/portfolio/_app/pages/__layout.svelte-b355a986.js"),
-						import("/portfolio/_app/pages/Introduction.svelte-b1b0b926.js")
+					import("/_app/pages/__layout.svelte-f1514b8a.js"),
+						import("/_app/pages/Introduction.svelte-5bdcfc9d.js")
 				],
 				params: {}
 			}
