--- a/Projects.html
+++ b/Projects.html
@@ -3,16 +3,16 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="description" content="" />
-		<link rel="icon" href="./favicon.png" />
+		<link rel="icon" href="/portfolio/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/_app/assets/pages/__layout.svelte-c658a416.css">
-	<link rel="stylesheet" href="/_app/assets/pages/Projects.svelte-6bef6533.css">
-	<link rel="modulepreload" href="/_app/start-2139b86b.js">
-	<link rel="modulepreload" href="/_app/chunks/vendor-9269c6a4.js">
-	<link rel="modulepreload" href="/_app/pages/__layout.svelte-f1514b8a.js">
-	<link rel="modulepreload" href="/_app/pages/Projects.svelte-526ee77b.js">
-	<link rel="modulepreload" href="/_app/chunks/data-74c7af95.js">
+	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-c658a416.css">
+	<link rel="stylesheet" href="/portfolio/_app/assets/pages/Projects.svelte-6bef6533.css">
+	<link rel="modulepreload" href="/portfolio/_app/start-d53407a6.js">
+	<link rel="modulepreload" href="/portfolio/_app/chunks/vendor-9269c6a4.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/__layout.svelte-f1514b8a.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/Projects.svelte-526ee77b.js">
+	<link rel="modulepreload" href="/portfolio/_app/chunks/data-74c7af95.js">
 	</head>
 	<body>
 		<div>
@@ -49,10 +49,10 @@
 
 
 		<script type="module" data-hydrate="tkvntz">
-		import { start } from "/_app/start-2139b86b.js";
+		import { start } from "/portfolio/_app/start-d53407a6.js";
 		start({
 			target: document.querySelector('[data-hydrate="tkvntz"]').parentNode,
-			paths: {"base":"","assets":""},
+			paths: {"base":"/portfolio","assets":"/portfolio"},
 			session: {},
 			route: true,
 			spa: false,
@@ -61,8 +61,8 @@
 				status: 200,
 				error: null,
 				nodes: [
-					import("/_app/pages/__layout.svelte-f1514b8a.js"),
-						import("/_app/pages/Projects.svelte-526ee77b.js")
+					import("/portfolio/_app/pages/__layout.svelte-f1514b8a.js"),
+						import("/portfolio/_app/pages/Projects.svelte-526ee77b.js")
 				],
 				params: {}
 			}
