--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
 		<link rel="icon" href="/portfolio/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-c658a416.css">
+	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-810f33fa.css">
 	<link rel="stylesheet" href="/portfolio/_app/assets/pages/Projects.svelte-6bef6533.css">
-	<link rel="modulepreload" href="/portfolio/_app/start-d53407a6.js">
+	<link rel="modulepreload" href="/portfolio/_app/start-da39b8e1.js">
 	<link rel="modulepreload" href="/portfolio/_app/chunks/vendor-9269c6a4.js">
 	<link rel="modulepreload" href="/portfolio/_app/pages/__layout.svelte-f1514b8a.js">
-	<link rel="modulepreload" href="/portfolio/_app/pages/index.svelte-c3e10c49.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/index.svelte-a42530ad.js">
 	<link rel="modulepreload" href="/portfolio/_app/pages/Introduction.svelte-5bdcfc9d.js">
 	<link rel="modulepreload" href="/portfolio/_app/chunks/Logo-faecdb38.js">
-	<link rel="modulepreload" href="/portfolio/_app/pages/Projects.svelte-526ee77b.js">
-	<link rel="modulepreload" href="/portfolio/_app/chunks/data-74c7af95.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/Projects.svelte-1435c5f3.js">
+	<link rel="modulepreload" href="/portfolio/_app/chunks/data-03f8f4ac.js">
 	<link rel="modulepreload" href="/portfolio/_app/pages/Contacts.svelte-76e8d244.js">
 	</head>
 	<body>
@@ -23,7 +23,7 @@
 
 
 <div class="snap-y snap-mandatory">
-        <div class="snap-center h-screen bg-black text-white flex flex-col justify-between items-start"><div class="flex justify-end my-5 w-11/12"></div>
+  <div class="snap-center h-screen bg-black text-white flex flex-col justify-between items-start"><div class="flex justify-end my-5 w-11/12"></div>
     <div class="mx-10"><div class="flex flex-col justify-start w-7/12"><h1 class="text-4xl font-bold">Hello 👋, my name is Vladimir and I am frontend developer!</h1>
             <h3 class="text-gray-300 text-sm font-thin">I am trying to build certain skills and abilities to develop fully fledged web applications. In parallel I use some backend-utilities and mobile-development technologies so in future I could become a full-stack developer.</h3></div>
         <div class="flex flex-col items-start"><div class="flex flex-col gap-5 my-5"><h2>Here&#39;s what I use:</h2>
@@ -36,8 +36,8 @@
                     <li><img width="40" height="40" src="/portfolio/nodejs.svg" alt="nodejs logo"></li>
                     <li><img width="40" height="40" src="/portfolio/wordpress.svg" alt="wordpress logo"></li>
                     <li><img width="40" height="40" src="/portfolio/vite.svg" alt="vite logo"></li></ul>
-                <i class="text-gray-300 text-xs">...and much more to come.</i></div></div></div></div>    
-    <div id="projects" class="snap-center"><div class="grid grid-cols-1 lg:grid-cols-3 lg:h-screen">
+                <i class="text-gray-300 text-xs">...and much more to come.</i></div></div></div></div>
+  <div id="projects" class="snap-center"><div class="grid grid-cols-1 lg:grid-cols-3 lg:h-screen">
 <div class="bg-[#B62DFF] text-white box-border overflow-hidden h-screen lg:h-auto svelte-1p32xp7"><a href="./project/shop-next"><div class="flex justify-between w-full"><h1 class="font-bold text-2xl m-5">shop-next</h1></div>
     <div class="flex flex-col gap-5 overflow-hidden box-border"><div class="flex justify-center items-center w-20 h-20 m-4"><img width="95" height="95" src="/portfolio/isometric/shopping-bag.png" alt="shopping-bag.png logo"></div>
         <div class="flex flex-col gap-2 m-4"><p class="font-bold text-4xl opacity-90 w-56">Next-based project</p>
@@ -57,7 +57,7 @@
         </div></a>
 </div>
 <div class="bg-[#00B8FF] text-white box-border overflow-hidden h-screen lg:h-auto svelte-1p32xp7"><a href="./project/react-calc"><div class="flex justify-between w-full"><h1 class="font-bold text-2xl m-5">react-calc</h1></div>
-    <div class="flex flex-col gap-5 overflow-hidden box-border"><div class="flex justify-center items-center w-20 h-20 m-4"><img width="95" height="95" src="/portfolio/isometric/calculatir.png" alt="calculatir.png logo"></div>
+    <div class="flex flex-col gap-5 overflow-hidden box-border"><div class="flex justify-center items-center w-20 h-20 m-4"><img width="95" height="95" src="/portfolio/isometric/calculator.png" alt="calculator.png logo"></div>
         <div class="flex flex-col gap-2 m-4"><p class="font-bold text-4xl opacity-90 w-56">React-based project</p>
             <p class="opacity-80 w-52">Combination of calculator and converter launched as Electron app</p></div>
         <div id="test"><p class="backward font-bold text-2xl opacity-70 w-52 svelte-1p32xp7">calculator</p><p class="forward font-bold text-3xl opacity-50 w-52 svelte-1p32xp7">converter</p><p class="backward font-bold text-2xl opacity-70 w-52 svelte-1p32xp7">electron</p><p class="forward font-bold text-3xl opacity-50 w-52 svelte-1p32xp7">redux</p><p class="backward font-bold text-2xl opacity-70 w-52 svelte-1p32xp7">ant design</p><p class="forward font-bold text-3xl opacity-50 w-52 svelte-1p32xp7">api</p><p class="backward font-bold text-2xl opacity-70 w-52 svelte-1p32xp7">drag and drop</p></div>
@@ -65,7 +65,7 @@
             
         </div></a>
 </div></div></div>
-    <div id="contacts" class="snap-center"><div class="snap-center h-screen bg-black text-white flex flex-col justify-center items-center gap-5"><div class="flex justify-start items-center gap-4 w-52"><img width="40" height="40" src="/portfolio/telegram.svg" alt="telegram logo">
+  <div id="contacts" class="snap-center"><div class="snap-center h-screen bg-black text-white flex flex-col justify-center items-center gap-5"><div class="flex justify-start items-center gap-4 w-52"><img width="40" height="40" src="/portfolio/telegram.svg" alt="telegram logo">
         <h1 class="text-2xl font-bold"><a href="https://t.me/spcpolice">@spcpolice
             </a></h1></div>
     <div class="flex justify-start items-center gap-4 w-52"><img width="40" height="40" src="/portfolio/github.svg" alt="github logo">
@@ -73,10 +73,10 @@
             </a></h1></div></div></div></div>
 
 
-		<script type="module" data-hydrate="wpxls7">
-		import { start } from "/portfolio/_app/start-d53407a6.js";
+		<script type="module" data-hydrate="udb0av">
+		import { start } from "/portfolio/_app/start-da39b8e1.js";
 		start({
-			target: document.querySelector('[data-hydrate="wpxls7"]').parentNode,
+			target: document.querySelector('[data-hydrate="udb0av"]').parentNode,
 			paths: {"base":"/portfolio","assets":"/portfolio"},
 			session: {},
 			route: true,
@@ -87,7 +87,7 @@
 				error: null,
 				nodes: [
 					import("/portfolio/_app/pages/__layout.svelte-f1514b8a.js"),
-						import("/portfolio/_app/pages/index.svelte-c3e10c49.js")
+						import("/portfolio/_app/pages/index.svelte-a42530ad.js")
 				],
 				params: {}
 			}
