--- a/Projects.html
+++ b/Projects.html
@@ -6,13 +6,13 @@
 		<link rel="icon" href="/portfolio/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-c658a416.css">
+	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-810f33fa.css">
 	<link rel="stylesheet" href="/portfolio/_app/assets/pages/Projects.svelte-6bef6533.css">
-	<link rel="modulepreload" href="/portfolio/_app/start-d53407a6.js">
+	<link rel="modulepreload" href="/portfolio/_app/start-da39b8e1.js">
 	<link rel="modulepreload" href="/portfolio/_app/chunks/vendor-9269c6a4.js">
 	<link rel="modulepreload" href="/portfolio/_app/pages/__layout.svelte-f1514b8a.js">
-	<link rel="modulepreload" href="/portfolio/_app/pages/Projects.svelte-526ee77b.js">
-	<link rel="modulepreload" href="/portfolio/_app/chunks/data-74c7af95.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/Projects.svelte-1435c5f3.js">
+	<link rel="modulepreload" href="/portfolio/_app/chunks/data-03f8f4ac.js">
 	</head>
 	<body>
 		<div>
@@ -38,7 +38,7 @@
         </div></a>
 </div>
 <div class="bg-[#00B8FF] text-white box-border overflow-hidden h-screen lg:h-auto svelte-1p32xp7"><a href="./project/react-calc"><div class="flex justify-between w-full"><h1 class="font-bold text-2xl m-5">react-calc</h1></div>
-    <div class="flex flex-col gap-5 overflow-hidden box-border"><div class="flex justify-center items-center w-20 h-20 m-4"><img width="95" height="95" src="/portfolio/isometric/calculatir.png" alt="calculatir.png logo"></div>
+    <div class="flex flex-col gap-5 overflow-hidden box-border"><div class="flex justify-center items-center w-20 h-20 m-4"><img width="95" height="95" src="/portfolio/isometric/calculator.png" alt="calculator.png logo"></div>
         <div class="flex flex-col gap-2 m-4"><p class="font-bold text-4xl opacity-90 w-56">React-based project</p>
             <p class="opacity-80 w-52">Combination of calculator and converter launched as Electron app</p></div>
         <div id="test"><p class="backward font-bold text-2xl opacity-70 w-52 svelte-1p32xp7">calculator</p><p class="forward font-bold text-3xl opacity-50 w-52 svelte-1p32xp7">converter</p><p class="backward font-bold text-2xl opacity-70 w-52 svelte-1p32xp7">electron</p><p class="forward font-bold text-3xl opacity-50 w-52 svelte-1p32xp7">redux</p><p class="backward font-bold text-2xl opacity-70 w-52 svelte-1p32xp7">ant design</p><p class="forward font-bold text-3xl opacity-50 w-52 svelte-1p32xp7">api</p><p class="backward font-bold text-2xl opacity-70 w-52 svelte-1p32xp7">drag and drop</p></div>
@@ -48,10 +48,10 @@
 </div></div>
 
 
-		<script type="module" data-hydrate="tkvntz">
-		import { start } from "/portfolio/_app/start-d53407a6.js";
+		<script type="module" data-hydrate="1pr6azr">
+		import { start } from "/portfolio/_app/start-da39b8e1.js";
 		start({
-			target: document.querySelector('[data-hydrate="tkvntz"]').parentNode,
+			target: document.querySelector('[data-hydrate="1pr6azr"]').parentNode,
 			paths: {"base":"/portfolio","assets":"/portfolio"},
 			session: {},
 			route: true,
@@ -62,7 +62,7 @@
 				error: null,
 				nodes: [
 					import("/portfolio/_app/pages/__layout.svelte-f1514b8a.js"),
-						import("/portfolio/_app/pages/Projects.svelte-526ee77b.js")
+						import("/portfolio/_app/pages/Projects.svelte-1435c5f3.js")
 				],
 				params: {}
 			}
