--- a/Contacts.html
+++ b/Contacts.html
@@ -6,11 +6,11 @@
 		<link rel="icon" href="/portfolio/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-810f33fa.css">
-	<link rel="modulepreload" href="/portfolio/_app/start-da39b8e1.js">
+	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-e8392d27.css">
+	<link rel="modulepreload" href="/portfolio/_app/start-385c9876.js">
 	<link rel="modulepreload" href="/portfolio/_app/chunks/vendor-9269c6a4.js">
 	<link rel="modulepreload" href="/portfolio/_app/pages/__layout.svelte-f1514b8a.js">
-	<link rel="modulepreload" href="/portfolio/_app/pages/Contacts.svelte-76e8d244.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/Contacts.svelte-3209b26e.js">
 	<link rel="modulepreload" href="/portfolio/_app/chunks/Logo-faecdb38.js">
 	</head>
 	<body>
@@ -18,17 +18,15 @@
 
 
 <div class="snap-center h-screen bg-black text-white flex flex-col justify-center items-center gap-5"><div class="flex justify-start items-center gap-4 w-52"><img width="40" height="40" src="/portfolio/telegram.svg" alt="telegram logo">
-        <h1 class="text-2xl font-bold"><a href="https://t.me/spcpolice">@spcpolice
-            </a></h1></div>
-    <div class="flex justify-start items-center gap-4 w-52"><img width="40" height="40" src="/portfolio/github.svg" alt="github logo">
-        <h1 class="text-2xl font-bold"><a href="https://github.com/spacepolice10/">spacepolice10
-            </a></h1></div></div>
+    <h1 class="text-2xl font-bold"><a href="https://t.me/spcpolice">@spcpolice </a></h1></div>
+  <div class="flex justify-start items-center gap-4 w-52"><img width="40" height="40" src="/portfolio/github.svg" alt="github logo">
+    <h1 class="text-2xl font-bold"><a href="https://github.com/spacepolice10/">spacepolice10 </a></h1></div></div>
 
 
-		<script type="module" data-hydrate="chem9q">
-		import { start } from "/portfolio/_app/start-da39b8e1.js";
+		<script type="module" data-hydrate="9hfqv2">
+		import { start } from "/portfolio/_app/start-385c9876.js";
 		start({
-			target: document.querySelector('[data-hydrate="chem9q"]').parentNode,
+			target: document.querySelector('[data-hydrate="9hfqv2"]').parentNode,
 			paths: {"base":"/portfolio","assets":"/portfolio"},
 			session: {},
 			route: true,
@@ -39,7 +37,7 @@
 				error: null,
 				nodes: [
 					import("/portfolio/_app/pages/__layout.svelte-f1514b8a.js"),
-						import("/portfolio/_app/pages/Contacts.svelte-76e8d244.js")
+						import("/portfolio/_app/pages/Contacts.svelte-3209b26e.js")
 				],
 				params: {}
 			}
