--- a/Introduction.html
+++ b/Introduction.html
@@ -6,11 +6,11 @@
 		<link rel="icon" href="/portfolio/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
-	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-810f33fa.css">
-	<link rel="modulepreload" href="/portfolio/_app/start-da39b8e1.js">
+	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-e8392d27.css">
+	<link rel="modulepreload" href="/portfolio/_app/start-385c9876.js">
 	<link rel="modulepreload" href="/portfolio/_app/chunks/vendor-9269c6a4.js">
 	<link rel="modulepreload" href="/portfolio/_app/pages/__layout.svelte-f1514b8a.js">
-	<link rel="modulepreload" href="/portfolio/_app/pages/Introduction.svelte-5bdcfc9d.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/Introduction.svelte-ddaff849.js">
 	<link rel="modulepreload" href="/portfolio/_app/chunks/Logo-faecdb38.js">
 	</head>
 	<body>
@@ -18,25 +18,30 @@
 
 
 <div class="snap-center h-screen bg-black text-white flex flex-col justify-between items-start"><div class="flex justify-end my-5 w-11/12"></div>
-    <div class="mx-10"><div class="flex flex-col justify-start w-7/12"><h1 class="text-4xl font-bold">Hello 👋, my name is Vladimir and I am frontend developer!</h1>
-            <h3 class="text-gray-300 text-sm font-thin">I am trying to build certain skills and abilities to develop fully fledged web applications. In parallel I use some backend-utilities and mobile-development technologies so in future I could become a full-stack developer.</h3></div>
-        <div class="flex flex-col items-start"><div class="flex flex-col gap-5 my-5"><h2>Here&#39;s what I use:</h2>
-                <ul class="flex items-center gap-4"><li><img width="40" height="40" src="/portfolio/svelte.svg" alt="svelte logo"></li>
-                    <li><img width="40" height="40" src="/portfolio/tailwind.svg" alt="tailwind logo"></li>
-                    <li><img width="40" height="40" src="/portfolio/react.svg" alt="react logo"></li>
-                    <li><img width="40" height="40" src="/portfolio/supabase.svg" alt="supabase logo"></li>
-                    <li><img width="40" height="40" src="/portfolio/postgres.svg" alt="postgres logo"></li>
-                    <li><img width="40" height="40" src="/portfolio/sequelize.svg" alt="sequelize logo"></li>
-                    <li><img width="40" height="40" src="/portfolio/nodejs.svg" alt="nodejs logo"></li>
-                    <li><img width="40" height="40" src="/portfolio/wordpress.svg" alt="wordpress logo"></li>
-                    <li><img width="40" height="40" src="/portfolio/vite.svg" alt="vite logo"></li></ul>
-                <i class="text-gray-300 text-xs">...and much more to come.</i></div></div></div></div>
+  <div class="mx-10"><div class="flex flex-col justify-start w-7/12"><h1 class="text-4xl font-bold">Hello 👋, my name is Vladimir and I am frontend developer!
+      </h1>
+      <h3 class="text-gray-300 text-sm font-thin">I am trying to build certain skills and abilities to develop fully
+        fledged web applications. In parallel I use some backend-utilities and
+        mobile-development technologies so in future I could become a full-stack
+        developer.
+      </h3></div>
+    <div class="flex flex-col items-start"><div class="flex flex-col gap-5 my-5"><h2>Here&#39;s what I use:</h2>
+        <ul class="flex items-center gap-4"><li><img width="40" height="40" src="/portfolio/svelte.svg" alt="svelte logo"></li>
+          <li><img width="40" height="40" src="/portfolio/tailwind.svg" alt="tailwind logo"></li>
+          <li><img width="40" height="40" src="/portfolio/react.svg" alt="react logo"></li>
+          <li><img width="40" height="40" src="/portfolio/supabase.svg" alt="supabase logo"></li>
+          <li><img width="40" height="40" src="/portfolio/postgres.svg" alt="postgres logo"></li>
+          <li><img width="40" height="40" src="/portfolio/sequelize.svg" alt="sequelize logo"></li>
+          <li><img width="40" height="40" src="/portfolio/nodejs.svg" alt="nodejs logo"></li>
+          <li><img width="40" height="40" src="/portfolio/wordpress.svg" alt="wordpress logo"></li>
+          <li><img width="40" height="40" src="/portfolio/vite.svg" alt="vite logo"></li></ul>
+        <i class="text-gray-300 text-xs">...and much more to come.</i></div></div></div></div>
 
 
-		<script type="module" data-hydrate="1rfgab">
-		import { start } from "/portfolio/_app/start-da39b8e1.js";
+		<script type="module" data-hydrate="d1h389">
+		import { start } from "/portfolio/_app/start-385c9876.js";
 		start({
-			target: document.querySelector('[data-hydrate="1rfgab"]').parentNode,
+			target: document.querySelector('[data-hydrate="d1h389"]').parentNode,
 			paths: {"base":"/portfolio","assets":"/portfolio"},
 			session: {},
 			route: true,
@@ -47,7 +52,7 @@
 				error: null,
 				nodes: [
 					import("/portfolio/_app/pages/__layout.svelte-f1514b8a.js"),
-						import("/portfolio/_app/pages/Introduction.svelte-5bdcfc9d.js")
+						import("/portfolio/_app/pages/Introduction.svelte-ddaff849.js")
 				],
 				params: {}
 			}
