--- a/Introduction.html
+++ b/Introduction.html
@@ -7,10 +7,10 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta http-equiv="content-security-policy" content="">
 	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-e8392d27.css">
-	<link rel="modulepreload" href="/portfolio/_app/start-385c9876.js">
+	<link rel="modulepreload" href="/portfolio/_app/start-c541d988.js">
 	<link rel="modulepreload" href="/portfolio/_app/chunks/vendor-9269c6a4.js">
 	<link rel="modulepreload" href="/portfolio/_app/pages/__layout.svelte-f1514b8a.js">
-	<link rel="modulepreload" href="/portfolio/_app/pages/Introduction.svelte-ddaff849.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/Introduction.svelte-20aee928.js">
 	<link rel="modulepreload" href="/portfolio/_app/chunks/Logo-faecdb38.js">
 	</head>
 	<body>
@@ -34,14 +34,16 @@
           <li><img width="40" height="40" src="/portfolio/sequelize.svg" alt="sequelize logo"></li>
           <li><img width="40" height="40" src="/portfolio/nodejs.svg" alt="nodejs logo"></li>
           <li><img width="40" height="40" src="/portfolio/wordpress.svg" alt="wordpress logo"></li>
-          <li><img width="40" height="40" src="/portfolio/vite.svg" alt="vite logo"></li></ul>
+          <li><img width="40" height="40" src="/portfolio/vite.svg" alt="vite logo"></li>
+          <li><img width="40" height="40" src="/portfolio/typescript.svg" alt="typescript logo"></li>
+          <li><img width="40" height="40" src="/portfolio/vue.svg" alt="vue logo"></li></ul>
         <i class="text-gray-300 text-xs">...and much more to come.</i></div></div></div></div>
 
 
-		<script type="module" data-hydrate="d1h389">
-		import { start } from "/portfolio/_app/start-385c9876.js";
+		<script type="module" data-hydrate="erjreh">
+		import { start } from "/portfolio/_app/start-c541d988.js";
 		start({
-			target: document.querySelector('[data-hydrate="d1h389"]').parentNode,
+			target: document.querySelector('[data-hydrate="erjreh"]').parentNode,
 			paths: {"base":"/portfolio","assets":"/portfolio"},
 			session: {},
 			route: true,
@@ -52,7 +54,7 @@
 				error: null,
 				nodes: [
 					import("/portfolio/_app/pages/__layout.svelte-f1514b8a.js"),
-						import("/portfolio/_app/pages/Introduction.svelte-ddaff849.js")
+						import("/portfolio/_app/pages/Introduction.svelte-20aee928.js")
 				],
 				params: {}
 			}
