--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
 		<meta http-equiv="content-security-policy" content="">
 	<link rel="stylesheet" href="/portfolio/_app/assets/pages/__layout.svelte-e8392d27.css">
 	<link rel="stylesheet" href="/portfolio/_app/assets/pages/Projects.svelte-391e5f31.css">
-	<link rel="modulepreload" href="/portfolio/_app/start-385c9876.js">
+	<link rel="modulepreload" href="/portfolio/_app/start-c541d988.js">
 	<link rel="modulepreload" href="/portfolio/_app/chunks/vendor-9269c6a4.js">
 	<link rel="modulepreload" href="/portfolio/_app/pages/__layout.svelte-f1514b8a.js">
-	<link rel="modulepreload" href="/portfolio/_app/pages/index.svelte-f2db3e17.js">
-	<link rel="modulepreload" href="/portfolio/_app/pages/Introduction.svelte-ddaff849.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/index.svelte-7d15b7fd.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/Introduction.svelte-20aee928.js">
 	<link rel="modulepreload" href="/portfolio/_app/chunks/Logo-faecdb38.js">
-	<link rel="modulepreload" href="/portfolio/_app/pages/Projects.svelte-ce46f7a4.js">
-	<link rel="modulepreload" href="/portfolio/_app/chunks/data-3f7edc2f.js">
+	<link rel="modulepreload" href="/portfolio/_app/pages/Projects.svelte-ddbdb884.js">
+	<link rel="modulepreload" href="/portfolio/_app/chunks/data-6ca6a8f1.js">
 	<link rel="modulepreload" href="/portfolio/_app/pages/Contacts.svelte-3209b26e.js">
 	</head>
 	<body>
@@ -40,7 +40,9 @@
           <li><img width="40" height="40" src="/portfolio/sequelize.svg" alt="sequelize logo"></li>
           <li><img width="40" height="40" src="/portfolio/nodejs.svg" alt="nodejs logo"></li>
           <li><img width="40" height="40" src="/portfolio/wordpress.svg" alt="wordpress logo"></li>
-          <li><img width="40" height="40" src="/portfolio/vite.svg" alt="vite logo"></li></ul>
+          <li><img width="40" height="40" src="/portfolio/vite.svg" alt="vite logo"></li>
+          <li><img width="40" height="40" src="/portfolio/typescript.svg" alt="typescript logo"></li>
+          <li><img width="40" height="40" src="/portfolio/vue.svg" alt="vue logo"></li></ul>
         <i class="text-gray-300 text-xs">...and much more to come.</i></div></div></div></div>
   <div id="projects" class="snap-center"><div class="grid grid-cols-1 lg:grid-cols-3 lg:h-screen">
 <div class="bg-[#B62DFF] text-white box-border overflow-hidden h-screen lg:h-auto svelte-io1qvl"><a href="./project/shop-next"><div class="flex justify-between w-full"><h1 class="font-bold text-2xl m-5">shop-next</h1></div>
@@ -76,10 +78,10 @@
     <h1 class="text-2xl font-bold"><a href="https://github.com/spacepolice10/">spacepolice10 </a></h1></div></div></div></div>
 
 
-		<script type="module" data-hydrate="1vdqini">
-		import { start } from "/portfolio/_app/start-385c9876.js";
+		<script type="module" data-hydrate="1xqbf0u">
+		import { start } from "/portfolio/_app/start-c541d988.js";
 		start({
-			target: document.querySelector('[data-hydrate="1vdqini"]').parentNode,
+			target: document.querySelector('[data-hydrate="1xqbf0u"]').parentNode,
 			paths: {"base":"/portfolio","assets":"/portfolio"},
 			session: {},
 			route: true,
@@ -90,7 +92,7 @@
 				error: null,
 				nodes: [
 					import("/portfolio/_app/pages/__layout.svelte-f1514b8a.js"),
-						import("/portfolio/_app/pages/index.svelte-f2db3e17.js")
+						import("/portfolio/_app/pages/index.svelte-7d15b7fd.js")
 				],
 				params: {}
 			}
